src/LexerAndParser/AngularParser.java
// Generated from D:/F.I.T.E/Fifth Year/S2/Compiler/Last_Angular_Compiler/src/LexerAndParser/AngularParser.g4 by ANTLR 4.13.2
package LexerAndParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OpenParen=1, CloseParen=2, OpenBracket=3, CloseBracket=4, OpenBrace=5, 
		CloseBrace=6, LessThan=7, MoreThan=8, Divide=9, Comma=10, SemiColon=11, 
		Colon=12, Dot=13, Assign=14, Arrow=15, DoubleQuote=16, SingleQuote=17, 
		Backtick=18, Import=19, From=20, Export=21, Class=22, Constructor=23, 
		Return=24, If=25, Else=26, For=27, While=28, Do=29, Break=30, Continue=31, 
		Public=32, Private=33, Protected=34, Var=35, Let=36, Const=37, Number=38, 
		String=39, Boolean=40, Any=41, Console=42, Log=43, NgFor=44, NgIf=45, 
		Store=46, State=47, Actions=48, Reducer=49, Selectors=50, Select=51, Selector=52, 
		Template=53, Of=54, Dispatch=55, On=56, Styles=57, Component=58, CssColor=59, 
		CssUnit=60, MultiplyAssign=61, DivideAssign=62, ModulusAssign=63, PlusAssign=64, 
		MinusAssign=65, IdentityEquals=66, IdentityNotEquals=67, Equals_=68, NotEquals=69, 
		LessThanEquals=70, GreaterThanEquals=71, BitAnd=72, BitXOr=73, BitOr=74, 
		Multiply=75, Plus=76, Minus=77, Modulus=78, And=79, Or=80, PlusPlus=81, 
		MinusMinus=82, NullLiteral=83, HexLiteral=84, HexColorLiteral=85, BooleanLiteral=86, 
		StringLiteral=87, DecimalLiteral=88, Identifier=89, WS=90, LineComment=91, 
		BlockComment=92;
	public static final int
		RULE_prog = 0, RULE_importStatement = 1, RULE_storeDecl = 2, RULE_storeBody = 3, 
		RULE_stateSection = 4, RULE_storeStateField = 5, RULE_actionsSection = 6, 
		RULE_actionDecl = 7, RULE_reducerSection = 8, RULE_reducerRule = 9, RULE_selectorsSection = 10, 
		RULE_selectorDecl = 11, RULE_componentDecorator = 12, RULE_compoenentObject = 13, 
		RULE_statement = 14, RULE_block = 15, RULE_loops = 16, RULE_if = 17, RULE_for = 18, 
		RULE_forParameters = 19, RULE_while = 20, RULE_do = 21, RULE_consoleLog = 22, 
		RULE_arrayDeclaration = 23, RULE_decl = 24, RULE_variableDecl = 25, RULE_variableTypeDecl = 26, 
		RULE_dataTypes = 27, RULE_initialize = 28, RULE_expr = 29, RULE_return = 30, 
		RULE_arithmeticExpr = 31, RULE_operartor = 32, RULE_identifier_ = 33, 
		RULE_arrayIndex = 34, RULE_anyLiteral = 35, RULE_arrayLiteral = 36, RULE_arrayList = 37, 
		RULE_arrayElement = 38, RULE_objectLiteral = 39, RULE_objectBody = 40, 
		RULE_objectKeyValue = 41, RULE_functionDecl = 42, RULE_normalFunctionDecleration = 43, 
		RULE_arrowFunctionDecleration = 44, RULE_functionBody = 45, RULE_functionParameters = 46, 
		RULE_variableFunctionSingleArgument = 47, RULE_constructor = 48, RULE_injectableFunctionParameters = 49, 
		RULE_injectableVariableFunctionSingleArgument = 50, RULE_accessModifires = 51, 
		RULE_html = 52, RULE_htmlContent = 53, RULE_interpolation = 54, RULE_interpolationValue = 55, 
		RULE_identifierPath = 56, RULE_textContent = 57, RULE_htmlElement = 58, 
		RULE_htmlTag = 59, RULE_openTag = 60, RULE_selfClosingTag = 61, RULE_closeTag = 62, 
		RULE_structuralDirectives = 63, RULE_forDirective = 64, RULE_ifDirective = 65, 
		RULE_attribute = 66, RULE_attributeName = 67, RULE_attributeValue = 68, 
		RULE_boundAttribute = 69, RULE_eventName = 70, RULE_eventBinding = 71, 
		RULE_functionCall = 72, RULE_styles = 73, RULE_cssRule = 74, RULE_cssDeclaration = 75, 
		RULE_propertyValue = 76, RULE_cssBasicColor = 77;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "importStatement", "storeDecl", "storeBody", "stateSection", 
			"storeStateField", "actionsSection", "actionDecl", "reducerSection", 
			"reducerRule", "selectorsSection", "selectorDecl", "componentDecorator", 
			"compoenentObject", "statement", "block", "loops", "if", "for", "forParameters", 
			"while", "do", "consoleLog", "arrayDeclaration", "decl", "variableDecl", 
			"variableTypeDecl", "dataTypes", "initialize", "expr", "return", "arithmeticExpr", 
			"operartor", "identifier_", "arrayIndex", "anyLiteral", "arrayLiteral", 
			"arrayList", "arrayElement", "objectLiteral", "objectBody", "objectKeyValue", 
			"functionDecl", "normalFunctionDecleration", "arrowFunctionDecleration", 
			"functionBody", "functionParameters", "variableFunctionSingleArgument", 
			"constructor", "injectableFunctionParameters", "injectableVariableFunctionSingleArgument", 
			"accessModifires", "html", "htmlContent", "interpolation", "interpolationValue", 
			"identifierPath", "textContent", "htmlElement", "htmlTag", "openTag", 
			"selfClosingTag", "closeTag", "structuralDirectives", "forDirective", 
			"ifDirective", "attribute", "attributeName", "attributeValue", "boundAttribute", 
			"eventName", "eventBinding", "functionCall", "styles", "cssRule", "cssDeclaration", 
			"propertyValue", "cssBasicColor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", null, null, null, "','", 
			"';'", "':'", "'.'", "'='", "'=>'", "'\"'", "'''", "'`'", "'import'", 
			"'from'", "'export'", "'class'", "'constructor'", "'return'", "'if'", 
			"'else'", "'for'", "'while'", "'do'", "'break'", "'continue'", "'public'", 
			"'private'", "'protected'", "'var'", "'let'", "'const'", "'number'", 
			"'string'", "'boolean'", "'any'", "'console'", "'log'", "'*ngFor'", "'*ngIf'", 
			"'store'", "'state'", "'actions'", "'reducer'", "'selectors'", "'select'", 
			"'selector'", "'template'", "'of'", "'dispatch'", "'on'", "'styles'", 
			"'@Component'", null, null, "'*='", "'/='", "'%='", "'+='", "'-='", "'==='", 
			"'!=='", "'=='", "'!='", "'<='", "'>='", "'&'", "'^'", "'|'", "'*'", 
			"'+'", "'-'", "'%'", "'&&'", "'||'", "'++'", "'--'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OpenParen", "CloseParen", "OpenBracket", "CloseBracket", "OpenBrace", 
			"CloseBrace", "LessThan", "MoreThan", "Divide", "Comma", "SemiColon", 
			"Colon", "Dot", "Assign", "Arrow", "DoubleQuote", "SingleQuote", "Backtick", 
			"Import", "From", "Export", "Class", "Constructor", "Return", "If", "Else", 
			"For", "While", "Do", "Break", "Continue", "Public", "Private", "Protected", 
			"Var", "Let", "Const", "Number", "String", "Boolean", "Any", "Console", 
			"Log", "NgFor", "NgIf", "Store", "State", "Actions", "Reducer", "Selectors", 
			"Select", "Selector", "Template", "Of", "Dispatch", "On", "Styles", "Component", 
			"CssColor", "CssUnit", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
			"PlusAssign", "MinusAssign", "IdentityEquals", "IdentityNotEquals", "Equals_", 
			"NotEquals", "LessThanEquals", "GreaterThanEquals", "BitAnd", "BitXOr", 
			"BitOr", "Multiply", "Plus", "Minus", "Modulus", "And", "Or", "PlusPlus", 
			"MinusMinus", "NullLiteral", "HexLiteral", "HexColorLiteral", "BooleanLiteral", 
			"StringLiteral", "DecimalLiteral", "Identifier", "WS", "LineComment", 
			"BlockComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ComponentDecoratorContext componentDecorator() {
			return getRuleContext(ComponentDecoratorContext.class,0);
		}
		public TerminalNode Class() { return getToken(AngularParser.Class, 0); }
		public Identifier_Context identifier_() {
			return getRuleContext(Identifier_Context.class,0);
		}
		public TerminalNode OpenBrace() { return getToken(AngularParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(AngularParser.CloseBrace, 0); }
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<StoreDeclContext> storeDecl() {
			return getRuleContexts(StoreDeclContext.class);
		}
		public StoreDeclContext storeDecl(int i) {
			return getRuleContext(StoreDeclContext.class,i);
		}
		public TerminalNode Export() { return getToken(AngularParser.Export, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Import) {
				{
				{
				setState(156);
				importStatement();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Store) {
				{
				{
				setState(162);
				storeDecl();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(168);
			componentDecorator();
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Export) {
				{
				setState(169);
				match(Export);
				}
			}

			setState(172);
			match(Class);
			setState(173);
			identifier_();
			setState(174);
			match(OpenBrace);
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 38285239616798762L) != 0) || ((((_la - 87)) & ~0x3f) == 0 && ((1L << (_la - 87)) & 7L) != 0)) {
				{
				{
				setState(175);
				statement();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(181);
			match(CloseBrace);
			setState(182);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode Import() { return getToken(AngularParser.Import, 0); }
		public TerminalNode From() { return getToken(AngularParser.From, 0); }
		public TerminalNode StringLiteral() { return getToken(AngularParser.StringLiteral, 0); }
		public Identifier_Context identifier_() {
			return getRuleContext(Identifier_Context.class,0);
		}
		public TerminalNode SemiColon() { return getToken(AngularParser.SemiColon, 0); }
		public TerminalNode OpenBrace() { return getToken(AngularParser.OpenBrace, 0); }
		public TerminalNode CloseBrace() { return getToken(AngularParser.CloseBrace, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(Import);
			setState(190);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OpenBrace:
				{
				{
				setState(185);
				match(OpenBrace);
				setState(186);
				identifier_();
				setState(187);
				match(CloseBrace);
				}
				}
				break;
			case Identifier:
				{
				setState(189);
				identifier_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(192);
			match(From);
			setState(193);
			match(StringLiteral);
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SemiColon) {
				{
				setState(194);
				match(SemiColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StoreDeclContext extends ParserRuleContext {
		public TerminalNode Store() { return getToken(AngularParser.Store, 0); }
		public Identifier_Context identifier_() {
			return getRuleContext(Identifier_Context.class,0);
		}
		public TerminalNode OpenBrace() { return getToken(AngularParser.OpenBrace, 0); }
		public StoreBodyContext storeBody() {
			return getRuleContext(StoreBodyContext.class,0);
		}
		public TerminalNode CloseBrace() { return getToken(AngularParser.CloseBrace, 0); }
		public StoreDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStoreDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStoreDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStoreDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StoreDeclContext storeDecl() throws RecognitionException {
		StoreDeclContext _localctx = new StoreDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_storeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(Store);
			setState(198);
			identifier_();
			setState(199);
			match(OpenBrace);
			setState(200);
			storeBody();
			setState(201);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StoreBodyContext extends ParserRuleContext {
		public StateSectionContext stateSection() {
			return getRuleContext(StateSectionContext.class,0);
		}
		public ActionsSectionContext actionsSection() {
			return getRuleContext(ActionsSectionContext.class,0);
		}
		public ReducerSectionContext reducerSection() {
			return getRuleContext(ReducerSectionContext.class,0);
		}
		public SelectorsSectionContext selectorsSection() {
			return getRuleContext(SelectorsSectionContext.class,0);
		}
		public StoreBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storeBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStoreBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStoreBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStoreBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StoreBodyContext storeBody() throws RecognitionException {
		StoreBodyContext _localctx = new StoreBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_storeBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			stateSection();
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Actions) {
				{
				setState(204);
				actionsSection();
				}
			}

			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Reducer) {
				{
				setState(207);
				reducerSection();
				}
			}

			setState(211);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Selectors) {
				{
				setState(210);
				selectorsSection();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StateSectionContext extends ParserRuleContext {
		public TerminalNode State() { return getToken(AngularParser.State, 0); }
		public TerminalNode OpenBrace() { return getToken(AngularParser.OpenBrace, 0); }
		public List<StoreStateFieldContext> storeStateField() {
			return getRuleContexts(StoreStateFieldContext.class);
		}
		public StoreStateFieldContext storeStateField(int i) {
			return getRuleContext(StoreStateFieldContext.class,i);
		}
		public TerminalNode CloseBrace() { return getToken(AngularParser.CloseBrace, 0); }
		public List<TerminalNode> Comma() { return getTokens(AngularParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(AngularParser.Comma, i);
		}
		public StateSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStateSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStateSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStateSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateSectionContext stateSection() throws RecognitionException {
		StateSectionContext _localctx = new StateSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stateSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			match(State);
			setState(214);
			match(OpenBrace);
			setState(215);
			storeStateField();
			setState(220);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(216);
				match(Comma);
				setState(217);
				storeStateField();
				}
				}
				setState(222);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(223);
			match(CloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StoreStateFieldContext extends ParserRuleContext {
		public Identifier_Context identifier_() {
			return getRuleContext(Identifier_Context.class,0);
		}
		public TerminalNode Colon() { return getToken(AngularParser.Colon, 0); }
		public TerminalNode Assign() { return getToken(AngularParser.Assign, 0); }
		public AnyLiteralContext anyLiteral() {
			return getRuleContext(AnyLiteralContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StoreStateFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storeStateField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterStoreStateField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitStoreStateField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitStoreStateField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StoreStateFieldContext storeStateField() throws RecognitionException {
		StoreStateFieldContext _localctx = new StoreStateFieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_storeStateField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(225);
			identifier_();
			setState(226);
			_la = _input.LA(1);
			if ( !(_la==Colon || _la==Assign) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(229);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(227);
				anyLiteral();
				}
				break;
			case 2:
				{
				setState(228);
				expr(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
